new svg and styling

--- a/src/app/world-map/world-map.component.css
+++ b/src/app/world-map/world-map.component.css
@@ -1,10 +1,11 @@
-svg {
-    height: auto !important;
-    width: 100%;
+body,
+html {
+    height: 100%;
+    margin: 0;
 }
 
 .map-box {
-    max-width: 85%;
+    max-width: 100%;
     max-height: 100%;
     overflow: hidden;
     display: flex;
